tests/baselines/reference/arrayReferenceWithoutTypeArgs.errors.txt
tests/cases/compiler/arrayReferenceWithoutTypeArgs.ts(2,17): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.


==== tests/cases/compiler/arrayReferenceWithoutTypeArgs.ts (1 errors) ====
    class X {
        public f(a: Array) { }
                    ~~~~~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
    }